--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,9 +20,9 @@ html
 
             div(class="collapse navbar-collapse" id="navbarSupportedContent")
                 ul(class="navbar-nav mr-auto")
-                    li(class="nav-item active"): a(class="nav-link" href="#") Home
+                    li(class="nav-item active"): a(class="nav-link" href="/") Home
                         span(class="sr-only") Current
-                    li(class="nav-item"): a(class="nav-link" href="#") Opret SNYT
+                    li(class="nav-item"): a(class="nav-link" href="/opretsnyt") Opret SNYT
                     li(class="nav-item"): a(class="nav-link" href="#") Læsekvittering oversigt
 
                 form(class="form-inline my-2 my-lg-0")
