--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,10 +7,9 @@ html
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
         )
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+        script(src='js/clientJs.js')
         script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous")
-
-
     body
         //https://getbootstrap.com/docs/4.0/components/navbar/
         nav(class="navbar navbar-expand-lg navbar-light bg-light")
@@ -45,11 +44,53 @@ html
             div(class="modal-dialog" role="document")
                 div(class="modal-content")
                     div(class="modal-header")
-                        h5(class="modal-title") Modal title
+                        h5(class="modal-title") Avanceret Søgning
                         button(type="button" class="close" data-dismiss="modal" aria-label="Close")
                             span(aria-hidden="true") &times;
                     div(class="modal-body")
-                        p HER SKAL TING VÆRE
+                        form(id="advSearch")
+                            label(for="advCategory") Kategori
+                            br
+                            select(id="advCategory")
+                                option(value="" selected="true")
+                                option(value="ac") AC
+                                option(value="logistik") Logistik
+                                option(value="tovholder") Tovholder
+                                option(value="hygiejne") Hygiejne
+                                option(value="levering") Levering
+                                option(value="reklamation") Reklamation
+                                option(value="it") IT
+                                option(value="klinisk") Klinisk Forsøg
+                                option(value="produktion") Produktion
+                            br
+                            br
+                            label(for="advText") Søgeord
+                            br
+                            input#advText(type="text")
+                            br
+                            br
+                            table#advDateTable
+                                tr
+                                    th Dato Fra
+                                    th Dato Til
+                                tr
+                                    td
+                                        input#advDateFrom(type="date")
+                                    td
+                                        input#advDateTo(type="date")
+                            br
+                            br
+
+                            input#advRadio1(type="radio" name="advRadioButtons" value="true" style="margin-right: 10px")
+                            label(for="advRadio1") Læsekvitteret
+                            br
+                            input#advRadio2(type="radio" name="advRadioButtons" value="false" style="margin-right: 10px")
+                            label(for="advRadio2") Ikke Læsekvitteret
+                            br
+                            input#advRadio3(type="radio" name="advRadioButtons" style="margin-right: 10px" checked="checked")
+                            label(for="advRadio3") Alle
+                            br
+
                     div(class="modal-footer")
                         button(type="button" class="btn btn-primary") Søg
                         button(type="button" class="btn btn-secondary" data-dismiss="modal") Luk
