--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,47 +12,46 @@ html
 
 
     body
-        //https://getbootstrap.com/docs/4.0/components/navbar/
-        nav(class="navbar navbar-expand-lg navbar-light bg-light")
-            a(class="navbar-brand" href="#") SNYT++
-            button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
-                span(class="navbar-toggler-icon")
+        if(authenticated)
+            //https://getbootstrap.com/docs/4.0/components/navbar/
+            nav(class="navbar navbar-expand-lg navbar-light bg-light")
+                a(class="navbar-brand" href="/") SNYT++
+                button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+                    span(class="navbar-toggler-icon")
 
-            div(class="collapse navbar-collapse" id="navbarSupportedContent")
-                ul(class="navbar-nav mr-auto")
-                    li(class="nav-item active"): a(class="nav-link" href="/") Home
-                        span(class="sr-only") Current
-                    li(class="nav-item"): a(class="nav-link" href="/opretsnyt") Opret SNYT
-                    li(class="nav-item"): a(class="nav-link" href="#") Læsekvittering oversigt
+                div(class="collapse navbar-collapse" id="navbarSupportedContent")
+                    ul(class="navbar-nav mr-auto")
+                        li(class="nav-item"): a(class="nav-link" href="/opretsnyt") Opret SNYT
+                        li(class="nav-item"): a(class="nav-link" href="#") Læsekvittering oversigt
 
-                form(class="form-inline my-2 my-lg-0")
-                    input(class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search")
-                    button(class="btn btn-outline-success my-2 my-sm-0" type="submit") Search
+                    form(class="form-inline my-2 my-lg-0")
+                        input(class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search")
+                        button(class="btn btn-outline-success my-2 my-sm-0" type="submit") Search
 
-                form(class="form-inline my-2 my-lg-0")
-                    button(type="button" class="btn btn-primary" data-toggle="modal" data-target="#advancedSearch") Flere søgemuligheder
+                    form(class="form-inline my-2 my-lg-0")
+                        button(type="button" class="btn btn-primary" data-toggle="modal" data-target="#advancedSearch") Flere søgemuligheder
 
-                ul(class="navbar-nav")
-                    //li(class="nav-item"): a(class="nav-link" href="#") Flere søgemuligheder
-                    li(class="nav-item dropdown")
-                        a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") BRUGERNAVN
-                        div(class="dropdown-menu" aria-labelledby="navbarDropdown")
-                            a(class="dropdown-item" href="#") link1
-                            a(class="dropdown-item" href="#") link2
+                    ul(class="navbar-nav")
+                        //li(class="nav-item"): a(class="nav-link" href="#") Flere søgemuligheder
+                        li(class="nav-item dropdown")
+                            a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") BRUGERNAVN
+                            div(class="dropdown-menu" aria-labelledby="navbarDropdown")
+                                a(class="dropdown-item" href="#") link1
+                                a(class="dropdown-item" href="/logout") Log ud
 
-        //https://getbootstrap.com/docs/4.0/components/modal/
-        div(class="modal" tabindex="-1" role="dialog" id="advancedSearch")
-            div(class="modal-dialog" role="document")
-                div(class="modal-content")
-                    div(class="modal-header")
-                        h5(class="modal-title") Modal title
-                        button(type="button" class="close" data-dismiss="modal" aria-label="Close")
-                            span(aria-hidden="true") &times;
-                    div(class="modal-body")
-                        p HER SKAL TING VÆRE
-                    div(class="modal-footer")
-                        button(type="button" class="btn btn-primary") Søg
-                        button(type="button" class="btn btn-secondary" data-dismiss="modal") Luk
+            //https://getbootstrap.com/docs/4.0/components/modal/
+            div(class="modal" tabindex="-1" role="dialog" id="advancedSearch")
+                div(class="modal-dialog" role="document")
+                    div(class="modal-content")
+                        div(class="modal-header")
+                            h5(class="modal-title") Modal title
+                            button(type="button" class="close" data-dismiss="modal" aria-label="Close")
+                                span(aria-hidden="true") &times;
+                        div(class="modal-body")
+                            p HER SKAL TING VÆRE
+                        div(class="modal-footer")
+                            button(type="button" class="btn btn-primary") Søg
+                            button(type="button" class="btn btn-secondary" data-dismiss="modal") Luk
 
 
 
