--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block body
                                 a(href="/snyt/"+snyt._id) #{snyt.subject}
                             td= snyt.created
                             td= snyt.user
-                            td TODO //TODO
+                            td //TODO
     else
         //Hvis man ikke er logget ind kommer det her:
         h1 SNYT++
