--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,6 +34,7 @@ html
                         //li(class="nav-item"): a(class="nav-link" href="#") Flere søgemuligheder
                         li(class="nav-item dropdown")
                             a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") BRUGERNAVN
+                            //TODO hvordan fanden får vi smidt brugernavn ind i layout?
                             div(class="dropdown-menu" aria-labelledby="navbarDropdown")
                                 a(class="dropdown-item" href="#") link1
                                 a(class="dropdown-item" href="/logout") Log ud
