US6 og US8 stuff

--- a/views/createSnyt.pug
+++ b/views/createSnyt.pug
@@ -40,14 +40,14 @@ block body
                             //input(type="text" name="snyt[category]")
                             select(name="snyt[category]")
                                 option(value="ac") AC
-                                option(value="logistik") Logistik
-                                option(value="tovholder") Tovholder
-                                option(value="hygiejne") Hygiejne
-                                option(value="levering") Levering
-                                option(value="reklamation") Reklamation
-                                option(value="it") IT
-                                option(value="klinisk") Klinisk Forsøg
-                                option(value="produktion") Produktion
+                                option(value="Logistik") Logistik
+                                option(value="Tovholder") Tovholder
+                                option(value="Hygiejne") Hygiejne
+                                option(value="Levering") Levering
+                                option(value="Reklamation") Reklamation
+                                option(value="IT") IT
+                                option(value="Klinisk Forsøg") Klinisk Forsøg
+                                option(value="Produktion") Produktion
 
 
                         li
@@ -57,6 +57,6 @@ block body
                 div(class="col-10")
                     ul(type="none")
                         li
-                            input(type="text" name="snyt[subject]")
+                            input(type="text" name="snyt[subject]" style="width: 1073px;")
                         li
                             textarea(name="snyt[text]" rows="20" cols="150")
