--- a/views/index.pug
+++ b/views/index.pug
@@ -9,14 +9,7 @@ block body
                         th Dato
                         th Initialer
                         th Læst
-                tbody
-                    each snyt in allSnyt
-                        tr
-                            td
-                                a(href="/snyt/"+snyt._id) #{snyt.subject}
-                            td= snyt.created
-                            td= snyt.user
-                            td //TODO
+                tbody#snytOversigt
     else
         //Hvis man ikke er logget ind kommer det her:
         h1 SNYT++
