--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,10 +10,10 @@ html
         script(src='js/clientJs.js')
         script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous")
-    body
+    body(style="padding-right: 30px")
         if(authenticated)
             //https://getbootstrap.com/docs/4.0/components/navbar/
-            nav(class="navbar navbar-expand-lg navbar-light bg-light")
+            nav(class="navbar navbar-expand-lg navbar-light bg-light" style="padding-right:0px; ")
                 a(class="navbar-brand" href="/") SNYT++
                 button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
                     span(class="navbar-toggler-icon")
@@ -22,9 +22,7 @@ html
                     ul(class="navbar-nav mr-auto")
                         li(class="nav-item"): a(class="nav-link" href="/opretsnyt") Opret SNYT
                         li(class="nav-item"): a(class="nav-link" href="#") Læsekvittering oversigt
-
-
-                    input(class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="regularSearchText")
+                    input(class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="regularSearchText" style="width: 750px;")
                     button(class="btn btn-outline-success my-2 my-sm-0" onClick="regularSearch();") Search
 
                     form(class="form-inline my-2 my-lg-0")
@@ -94,8 +92,4 @@ html
                     div(class="modal-footer")
                         button(type="button" class="btn btn-primary" onClick="advancedSearch();") Søg
                         button(type="button" class="btn btn-secondary" data-dismiss="modal") Luk
-
-
-
-
         block body
