Admin login etc

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -1,21 +1,82 @@
-if(authenticatedAdmin)
-    //INDSÆT KODE DER VISER SNYT OVERSIGT HER
-    h1 INDSÆT OVERSIGT TING HER TEMP TEMP TEMP
-    if !errors
-        each user in allUsers
-            p #{user.first} #{user.last}
-    else
-        p FEJL!
-else
-    //Hvis man ikke er logget ind kommer det her:
-    h1 SNYT++
-    form(action="/admin/login", method="POST")
-        fieldset
-            p
-                label Email
-                input(name="adminUsername", type="text")
-            p
-                label Password
-                input(name="adminPassword", type="password")
-            p
-                button(type="submit" class="btn btn-primary") Log Ind
+doctype html
+html
+    head
+        title Admin
+        link(
+        rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+        )
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous")
+        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous")
+
+    body
+
+
+        if(authenticatedAdmin)
+
+            nav(class="navbar navbar-expand-sm navbar-light bg-info")
+                div(class="collapse navbar-collapse" id="navbarSupportedContent")
+                    ul(class="navbar-nav mr-auto")
+                        li(class="nav-item"): a(
+                        class="nav-link"
+                        href="#"
+                        data-toggle="modal"
+                        data-target="#exampleModal"
+                        style="font-size: 30px; font-weight: bold;") Opret bruger
+
+            #exampleModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalLabel', aria-hidden='true')
+                .modal-dialog(role='document')
+                    .modal-content
+                        .modal-header
+                            h5#exampleModalLabel.modal-title Ny bruger
+                            button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                span(aria-hidden='true') ×
+                        .modal-body
+                            form
+                                .form-group
+                                    label.form-control-label(for='fornavn') Fornavn:
+                                    input#fornavn.form-control(type='text')
+                                .form-group
+                                    label.form-control-label(for='efternavn') Efternavn:
+                                    input#efternavn.form-control(type='text')
+                                .form-group
+                                    label.form-control-label(for='initialer') Initialer:
+                                    input#initialer.form-control(type='text')
+                                .form-group
+                                    label.form-control-label(for='email') Email:
+                                    input#email.form-control(type='email')
+                                .form-group
+                                    label.form-control-label(for='password') Adgangskode:
+                                    input#password.form-control(type='text')
+                        .modal-footer
+                            button.btn.btn-secondary(type='button', data-dismiss='modal') Luk
+                            button.btn.btn-primary(type='button') Opret
+            br
+
+            if !errors
+                ul(class="list-group")
+                    each user in allUsers
+                        li
+                            a.list-group-item.list-group-item-action(href="/admin")  #{user.first} #{user.last}  (#{user.initials})
+                        br
+        else
+            nav(class="navbar navbar-expand-lg navbar-light bg-light")
+                a(class="navbar-brand" href="/") ADMIN LOGIN
+                button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+                    span(class="navbar-toggler-icon")
+            br
+            form(action="/admin/login", method="POST")
+                fieldset
+                    p
+                        label Brugernavn
+                        input(name="adminUsername", type="text")
+                    p
+                        label Adgangskode
+                        input(name="adminPassword", type="password")
+                    p
+                        button(type="submit" class="btn btn-primary") Log Ind
+
+
+    block body
+//Hvis man ikke er logget ind kommer det her:
