--- a/views/showSnyt.pug
+++ b/views/showSnyt.pug
@@ -1,7 +1,7 @@
 extends layout.pug
 block body
     if(authenticated)
-        form(action="/snyt/:id", method="POST")
+        form(action="/snyt/"+snyt._id, method="POST")
             div(class="row")
                 div(class="col-2")
                     fieldset
@@ -10,27 +10,28 @@ block body
                             a(href="/")
                                 button(type="button" class="btn btn-primary") Gå tilbage
                         li
-                        a(name="snyt[edok]" href=snyt[0].edok) e-Dok
+                        a(name="snyt[edok]" href=snyt.edok) e-Dok
                         li
                         label Dato
-                            input(type="text" name="snyt[created]" value=snyt[0].created.toLocaleDateString() disabled=true)
+                            input(type="text" name="snyt[created]" value=snyt.created.toLocaleDateString() disabled=true)
                         li
                         label Initialer
-                            input(type="text" name="snyt[user]", value=snyt[0].user disabled = true)
+                            input(type="text" name="snyt[user]", value=snyt.user disabled = true)
                         li
                         label Kategori
-                            input(type="text" name="snyt[category]" value=snyt[0].category disabled = true)
+                            input(type="text" name="snyt[category]" value=snyt.category disabled = true)
                         li
-                            a(href="/editsnyt/" + snyt[0]._id)
+                            a(href="/editsnyt/" + snyt._id)
                                 button(type="button" class="btn btn-primary") Rediger SNYT
 
-                        li
-                            button(type="submit" class="btn btn-primary") Kvitter
+                        if (userHasNotRead)
+                            li
+                                button(type="submit" class="btn btn-primary") Kvitter
 
                 div(class="col-10")
                     ul(type="none")
                         li
-                            input(type="text" name="snyt[subject]" value=snyt[0].subject disabled = true)
+                            input(type="text" name="snyt[subject]" value=snyt.subject disabled = true)
                         li
-                            textarea(rows="20" cols="150" disabled = true name="snyt[text]").form-control=snyt[0].text
+                            textarea(rows="20" cols="150" disabled = true name="snyt[text]").form-control=snyt.text
 
