--- a/views/showSnyt.pug
+++ b/views/showSnyt.pug
@@ -23,6 +23,9 @@ block body
                         li
                             a(href="/editsnyt/" + snyt[0]._id)
                                 button(type="button" class="btn btn-primary") Rediger SNYT
+                        li
+                            a(href="/updateSnyt/" + snyt[0]._id)
+                                button(type="button" class="btn btn-primary") Update SNYT
 
                         li
                             button(type="submit" class="btn btn-primary") Kvitter
