us10 slight snyt.model og showsnyt

--- a/views/showSnyt.pug
+++ b/views/showSnyt.pug
@@ -24,7 +24,7 @@ block body
                             a(href="/editsnyt/" + snyt._id)
                                 button(type="button" class="btn btn-primary") Rediger SNYT
                         li
-                            a(href="/updateSnyt/" + snyt[0]._id)
+                            a(href="/updateSnyt/" + snyt._id)
                                 button(type="button" class="btn btn-primary") Update SNYT
 
                         if (userHasNotRead)
