--- a/views/showSnyt.pug
+++ b/views/showSnyt.pug
@@ -21,15 +21,22 @@ block body
                         label Kategori
                             input(type="text" name="snyt[category]" value=snyt.category disabled = true)
                         li
-                            a(href="/editsnyt/" + snyt._id)
-                                button(type="button" class="btn btn-primary") Rediger SNYT
+                        a(href="/editsnyt/" + snyt._id)
+                            button(type="button" class="btn btn-primary") Rediger SNYT
                         li
-                            a(href="/updateSnyt/" + snyt._id)
-                                button(type="button" class="btn btn-primary") Update SNYT
+                        br
+                        a(href="/updateSnyt/" + snyt._id)
+                            button(type="button" class="btn btn-primary") Update SNYT
 
                         if (userHasNotRead)
                             li
+                            br
+                            button(type="submit" class="btn btn-primary") Kvitter
+                        else
+                            li
+                            label Du har allerede læsekvitteret
                                 button(type="submit" class="btn btn-primary") Kvitter
+
                         if(snytHasSubSnyt)
                             each sub in subSnytsInSnyt
                                 li=sub.text
