--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,6 +36,7 @@ html
                         //li(class="nav-item"): a(class="nav-link" href="#") Flere søgemuligheder
                         li(class="nav-item dropdown")
                             a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") #{me.email}
+                            input#hiddenInput(hidden value=me._id)
                             div(class="dropdown-menu" aria-labelledby="navbarDropdown")
                                 a(class="dropdown-item" href="#") link1
                                 a(class="dropdown-item" href="/logout") Log ud
